--- a/app/src/main/res/layout/vertical_horizontal_list_item.xml
+++ b/app/src/main/res/layout/vertical_horizontal_list_item.xml
@@ -44,7 +44,7 @@
 
         <ImageView
             android:id="@+id/dog_photo"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="149dp"
             android:contentDescription="@string/image_view_for_vertical_horizontal_list"
             android:scaleType="centerCrop"
